app/javascript/style/video/_layout.scss
@use "../utils/breakpoints" as *;
@use "../utils/scale";

#videos__show,
#channels__show {
  overflow-x: hidden;

  #main-container {
    height: calc(100vh - #{scale.$header_height});

    // reset min-height
    min-height: auto;
  }

  #video-show,
  #upcoming-stream {
    width: 100%;
  }

  .primary-video-area {
    // This is required to ensure that the controls can be shown over this area
    position: relative;

    canvas.primary-canvas {
      width: 100%;
      border-radius: 0 0 10px 10px;
    }

    canvas.pip-secondary-canvas {
      border-radius: 10px;
    }
  }

  .broadcasts__header {
    margin-bottom: 0;
  }

  .content-area__secondary {
    margin-top: 10px;

    canvas.fixed-secondary-canvas {
      border-radius: 10px 10px 0 0;
      width: 100%;
    }
  }

  /**
  Put any main responsive layout code for ONLY desktop here... this does not count elements that scale to their surroundings
   */
  @include large() {
    #main-container {
      margin: 0;
    }

    .content-area {
      flex-direction: row;
      display: flex;
      justify-content: center;
      min-width: 0;

      .content-area__primary {
        overflow-y: scroll;
        overflow-x: hidden;
        height: 100%;
        max-width: 1280px;
        margin-left: 19px;
        // Use padding, because margin moves to the right of scroll bar on firefox
        padding-right: 1vw;

        &::-webkit-scrollbar {
          display: none;
        }

        // If you don't specify the line height as 0
        // then there is spacing on the bottom of the canvas
        // but we don't want this to cascade into the header so
        // we revert it in the header part of the video area
        line-height: 0;
        .primary-video__header {
          line-height: normal;
        }

        canvas.primary-canvas {
          width: unset;
          max-height: 68vh;
          max-width: 100%;
          // Overridden for Desktop
          border-radius: 0;
        }
      }

      > div {
        border-radius: 10px;
      }

      .content-area__secondary {
        flex: 1;
        margin: 0 1vw 2vh 0;
        background: white;
        max-width: 20vw;
        min-width: 230px;
        display: flex;
        overflow-y: hidden;
        flex-direction: column;
      }

      canvas.pip-secondary-canvas {
        display: none;
      }

      .broadcasts {
        display: grid;
      }

      .main-footer {
        margin: auto 10px 0 0;
        display: flex;
      }
    }
  }

  /**
    This is the primary Video layout for portrait mobile views
     */
  @include smallTall() {
    #layout-container {
      position: absolute;
      top: 0;
      bottom: 0;
      right: 0;
      left: 0;
    }

    height: 100%;

    .content-area {
      flex-direction: column;
      align-items: center;
    }

    .content-area__primary,
    .primary-video-area,
    .content-area__secondary {
      width: 100%;
    }
    canvas.fixed-secondary-canvas {
      // We don't want to show the fixed canvas when we are in a small view
      display: none;
    }
    // Most of the code for PIP is inside of a separate file
    .primary-video--video-area {
      position: relative;
    }
    .pip-component canvas {
      width: 25vw;
    }
    .pip-component {
      $pip-padding: 10px;
      position: absolute;
      z-index: 1;

      &[data-corner="bottom-right"] {
        bottom: $pip-padding;
        right: $pip-padding;
      }

      &[data-corner="bottom-left"] {
        bottom: $pip-padding;
        left: $pip-padding;
      }

      &[data-corner="top-left"] {
        top: $pip-padding;
        left: $pip-padding;
      }

      &[data-corner="top-right"] {
        top: $pip-padding;
        right: $pip-padding;
      }
    }

    .pip-drop-quadrants {
      z-index: 1;
      .quadrant {
        width: 49%;
        height: 49%;
        position: absolute;
        &.bottom-left {
          bottom: 0;
          left: 0;
        }

        &.top-left {
          top: 0;
          left: 0;
        }

        &.top-right {
          top: 0;
          right: 0;
        }

        &.bottom-right {
          bottom: 0;
          right: 0;
        }
      }
    }

    // Hide some stuff on the page when we're mobile and writing a chat
    &[data-keyboard="visible"] {
      .content-area__primary,
      .top-navbar {
        display: none;
      }

      #layout-container {
        bottom: 270px;
      }
    }

    .streamer-profile--content {
      padding-top: 5px;
      padding-bottom: 5px;
    }

    .content-area__secondary {
      display: flex;
      height: 100%;

      .chat-section {
        div,
        textarea {
          font-size: 1rem;
        }
      }
    }
  }

  // This is generally when your phone or small device is sideways...
  // We hide a lot of stuff to make the view very minimal
  @include smallWide() {
    .content-area {
      flex-direction: row;
      display: flex;
      justify-content: center;
      min-width: 0;
    }

    .content-area__primary {
      padding-left: env(safe-area-inset-left);
      flex: 1;
    }

    .content-area__secondary {
      padding: env(safe-area-inset-top) calc(env(safe-area-inset-right) * 0.75)
        0 0vw;
      background: white;
      max-width: 20vw;
      display: flex;
      flex-direction: column;
      margin: 0;
      height: 100vh;
      height: calc(min(100vh, -webkit-fill-available));
    }

    header,
    .primary-video__header {
      display: none;
    }

    .chat-section {
      font-size: calc(min(0.65rem, 5vh));
    }

    canvas.pip-secondary-canvas {
      display: none;
    }
  }
}

/* This allows us to disable the broadcasts and footers for mobile while videos
   are playing */
[data-audience-view-stream-type="vod"],
[data-audience-view-stream-type="upcoming"],
[data-audience-view-stream-type="live"] {
  .main-footer,
  .broadcasts {
    display: none;
  }
}

